Source/WebCore/inspector/front-end/NetworkPanel.js
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2007, 2008 Apple Inc.  All rights reserved.
  * Copyright (C) 2008, 2009 Anthony Ricaud <rik@webkit.org>
- * Copyright (C) 2010 Google Inc. All rights reserved.
+ * Copyright (C) 2011 Google Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -38,7 +38,6 @@ WebInspector.NetworkPanel = function()
     this._resources = [];
     this._resourcesById = {};
     this._resourcesByURL = {};
-    this._lastIdentifier = 0;
     this._staleResources = [];
     this._resourceGridNodes = {};
     this._mainResourceLoadTime = -1;
@@ -733,12 +732,6 @@ WebInspector.NetworkPanel.prototype = {
         this._preserveLogToggle.toggled = !this._preserveLogToggle.toggled;
     },
 
-    reset: function()
-    {
-        if (!this._preserveLogToggle.toggled)
-            this._reset();
-    },
-
     _reset: function()
     {
         this._popoverHelper.hidePopup();
@@ -771,31 +764,33 @@ WebInspector.NetworkPanel.prototype = {
 
     get resources()
     {
-        return this._resourcesById;
+        return this._resources;
+    },
+
+    resourceById: function(id)
+    {
+        return this._resourcesById[id];
+    },
+
+    appendResource: function(resource)
+    {
+        this._resources.push(resource);
+        this._resourcesById[resource.identifier] = resource;
+        this._resourcesByURL[resource.url] = resource;
+
+        // Pull all the redirects of the main resource upon commit load.
+        if (resource.redirects) {
+            for (var i = 0; i < resource.redirects.length; ++i)
+                this.refreshResource(resource.redirects[i]);
+        }
+
+        this.refreshResource(resource);
     },
 
     refreshResource: function(resource)
     {
-        if (!resource.identifier)
-            resource.identifier = "network:" + this._lastIdentifier++;
-
-        if (!this._resourcesById[resource.identifier]) {
-            this._resources.push(resource);
-            this._resourcesById[resource.identifier] = resource;
-            this._resourcesByURL[resource.url] = resource;
-
-            // Pull all the redirects of the main resource upon commit load.
-            if (resource.redirects) {
-                for (var i = 0; i < resource.redirects.length; ++i)
-                    this.refreshResource(resource.redirects[i]);
-            }
-        }
-
         this._staleResources.push(resource);
         this._scheduleRefresh();
-
-        if (!resource)
-            return;
 
         var oldView = WebInspector.ResourceView.existingResourceViewForResource(resource);
         if (!oldView)
@@ -807,6 +802,17 @@ WebInspector.NetworkPanel.prototype = {
         var newView = WebInspector.ResourceView.recreateResourceView(resource);
         if (this.visibleView === oldView)
             this.visibleView = newView;
+    },
+
+    mainResourceChanged: function()
+    {
+        if (this._preserveLogToggle.toggled)
+            return;
+
+        this._reset();
+        // Now resurrect the main resource along with all redirects that lead to it.
+        var resourcesToAppend = (WebInspector.mainResource.redirects || []).concat(WebInspector.mainResource);
+        resourcesToAppend.forEach(this.appendResource, this);
     },
 
     canShowSourceLine: function(url, line)
